1.0/_old/grammars/src/RegiaScriptParser.py
# Generated from /home/inkeaton/Codice/regia/grammars/RegiaScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RegiaScriptParser ( Parser ):

    grammarFileName = "RegiaScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'STORY'", "'DEFAULT'", "'PRIORITY'", 
                     "'PHASE'", "'AGENT'", "'ACTION'", "'EVENT'", "'CONDITION'", 
                     "'DURING'", "'WHEN'", "'IF'", "'AND'", "'OR'", "'NOT'", 
                     "'DO'", "'BELIEVE'", "'FORGET'", "'ENVIRONMENT'", "'DIRECTOR'", 
                     "'MYSELF'", "'PLAYER'", "'TIMER'", "'TRANSITION'", 
                     "'TO'", "'END'", "'INITIAL'", "'OTHERWISE'", "'.'", 
                     "':'", "','", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "STORY", "DEFAULT", "PRIORITY", "PHASE", 
                      "AGENT", "ACTION", "EVENT", "CONDITION", "DURING", 
                      "WHEN", "IF", "AND", "OR", "NOT", "DO", "BELIEVE", 
                      "FORGET", "ENVIRONMENT", "DIRECTOR", "MYSELF", "PLAYER", 
                      "TIMER", "TRANSITION", "TO", "END", "INITIAL", "OTHERWISE", 
                      "PERIOD", "COLON", "COMMA", "LPAREN", "RPAREN", "NUMBER", 
                      "ID", "DOC_COMMENT", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_storyDef = 1
    RULE_defaultStory = 2
    RULE_namedStory = 3
    RULE_declaration = 4
    RULE_actionDecl = 5
    RULE_eventDecl = 6
    RULE_conditionDecl = 7
    RULE_origin = 8
    RULE_phaseDecl = 9
    RULE_storyAgentDecl = 10
    RULE_agentBlock = 11
    RULE_agentSection = 12
    RULE_duringBlock = 13
    RULE_transitionRule = 14
    RULE_phaseTarget = 15
    RULE_phaseRef = 16
    RULE_whenBlock = 17
    RULE_ifBranch = 18
    RULE_condExpr = 19
    RULE_condAnd = 20
    RULE_condTerm = 21
    RULE_condAtom = 22
    RULE_doSequence = 23
    RULE_doAction = 24

    ruleNames =  [ "program", "storyDef", "defaultStory", "namedStory", 
                   "declaration", "actionDecl", "eventDecl", "conditionDecl", 
                   "origin", "phaseDecl", "storyAgentDecl", "agentBlock", 
                   "agentSection", "duringBlock", "transitionRule", "phaseTarget", 
                   "phaseRef", "whenBlock", "ifBranch", "condExpr", "condAnd", 
                   "condTerm", "condAtom", "doSequence", "doAction" ]

    EOF = Token.EOF
    STORY=1
    DEFAULT=2
    PRIORITY=3
    PHASE=4
    AGENT=5
    ACTION=6
    EVENT=7
    CONDITION=8
    DURING=9
    WHEN=10
    IF=11
    AND=12
    OR=13
    NOT=14
    DO=15
    BELIEVE=16
    FORGET=17
    ENVIRONMENT=18
    DIRECTOR=19
    MYSELF=20
    PLAYER=21
    TIMER=22
    TRANSITION=23
    TO=24
    END=25
    INITIAL=26
    OTHERWISE=27
    PERIOD=28
    COLON=29
    COMMA=30
    LPAREN=31
    RPAREN=32
    NUMBER=33
    ID=34
    DOC_COMMENT=35
    COMMENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RegiaScriptParser.EOF, 0)

        def storyDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.StoryDefContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.StoryDefContext,i)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RegiaScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.storyDef()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==35):
                    break

            self.state = 55
            self.match(RegiaScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StoryDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defaultStory(self):
            return self.getTypedRuleContext(RegiaScriptParser.DefaultStoryContext,0)


        def namedStory(self):
            return self.getTypedRuleContext(RegiaScriptParser.NamedStoryContext,0)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_storyDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStoryDef" ):
                return visitor.visitStoryDef(self)
            else:
                return visitor.visitChildren(self)




    def storyDef(self):

        localctx = RegiaScriptParser.StoryDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_storyDef)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.defaultStory()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.namedStory()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultStoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STORY(self):
            return self.getToken(RegiaScriptParser.STORY, 0)

        def DEFAULT(self):
            return self.getToken(RegiaScriptParser.DEFAULT, 0)

        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def agentBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.AgentBlockContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.AgentBlockContext,i)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_defaultStory

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefaultStory" ):
                return visitor.visitDefaultStory(self)
            else:
                return visitor.visitChildren(self)




    def defaultStory(self):

        localctx = RegiaScriptParser.DefaultStoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defaultStory)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 61
                self.match(RegiaScriptParser.DOC_COMMENT)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(RegiaScriptParser.STORY)
            self.state = 68
            self.match(RegiaScriptParser.DEFAULT)
            self.state = 69
            self.match(RegiaScriptParser.PERIOD)
            self.state = 71 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 70
                    self.agentBlock()

                else:
                    raise NoViableAltException(self)
                self.state = 73 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedStoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STORY(self):
            return self.getToken(RegiaScriptParser.STORY, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def PRIORITY(self):
            return self.getToken(RegiaScriptParser.PRIORITY, 0)

        def NUMBER(self):
            return self.getToken(RegiaScriptParser.NUMBER, 0)

        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.DeclarationContext,i)


        def phaseDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.PhaseDeclContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.PhaseDeclContext,i)


        def storyAgentDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.StoryAgentDeclContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.StoryAgentDeclContext,i)


        def duringBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.DuringBlockContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.DuringBlockContext,i)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_namedStory

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedStory" ):
                return visitor.visitNamedStory(self)
            else:
                return visitor.visitChildren(self)




    def namedStory(self):

        localctx = RegiaScriptParser.NamedStoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namedStory)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 75
                self.match(RegiaScriptParser.DOC_COMMENT)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(RegiaScriptParser.STORY)
            self.state = 82
            self.match(RegiaScriptParser.ID)
            self.state = 83
            self.match(RegiaScriptParser.PRIORITY)
            self.state = 84
            self.match(RegiaScriptParser.NUMBER)
            self.state = 85
            self.match(RegiaScriptParser.PERIOD)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self.declaration() 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 92
                    self.phaseDecl() 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.storyAgentDecl() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 105 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 104
                    self.duringBlock()

                else:
                    raise NoViableAltException(self)
                self.state = 107 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actionDecl(self):
            return self.getTypedRuleContext(RegiaScriptParser.ActionDeclContext,0)


        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def eventDecl(self):
            return self.getTypedRuleContext(RegiaScriptParser.EventDeclContext,0)


        def conditionDecl(self):
            return self.getTypedRuleContext(RegiaScriptParser.ConditionDeclContext,0)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = RegiaScriptParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 109
                    self.match(RegiaScriptParser.DOC_COMMENT)
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self.actionDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 116
                    self.match(RegiaScriptParser.DOC_COMMENT)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 122
                self.eventDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==35:
                    self.state = 123
                    self.match(RegiaScriptParser.DOC_COMMENT)
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self.conditionDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTION(self):
            return self.getToken(RegiaScriptParser.ACTION, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_actionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionDecl" ):
                return visitor.visitActionDecl(self)
            else:
                return visitor.visitChildren(self)




    def actionDecl(self):

        localctx = RegiaScriptParser.ActionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(RegiaScriptParser.ACTION)
            self.state = 133
            self.match(RegiaScriptParser.ID)
            self.state = 134
            self.match(RegiaScriptParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVENT(self):
            return self.getToken(RegiaScriptParser.EVENT, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def origin(self):
            return self.getTypedRuleContext(RegiaScriptParser.OriginContext,0)


        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_eventDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventDecl" ):
                return visitor.visitEventDecl(self)
            else:
                return visitor.visitChildren(self)




    def eventDecl(self):

        localctx = RegiaScriptParser.EventDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eventDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(RegiaScriptParser.EVENT)
            self.state = 137
            self.match(RegiaScriptParser.ID)
            self.state = 138
            self.origin()
            self.state = 139
            self.match(RegiaScriptParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONDITION(self):
            return self.getToken(RegiaScriptParser.CONDITION, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def origin(self):
            return self.getTypedRuleContext(RegiaScriptParser.OriginContext,0)


        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_conditionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionDecl" ):
                return visitor.visitConditionDecl(self)
            else:
                return visitor.visitChildren(self)




    def conditionDecl(self):

        localctx = RegiaScriptParser.ConditionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(RegiaScriptParser.CONDITION)
            self.state = 142
            self.match(RegiaScriptParser.ID)
            self.state = 143
            self.origin()
            self.state = 144
            self.match(RegiaScriptParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OriginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENVIRONMENT(self):
            return self.getToken(RegiaScriptParser.ENVIRONMENT, 0)

        def DIRECTOR(self):
            return self.getToken(RegiaScriptParser.DIRECTOR, 0)

        def MYSELF(self):
            return self.getToken(RegiaScriptParser.MYSELF, 0)

        def PLAYER(self):
            return self.getToken(RegiaScriptParser.PLAYER, 0)

        def TIMER(self):
            return self.getToken(RegiaScriptParser.TIMER, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_origin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrigin" ):
                return visitor.visitOrigin(self)
            else:
                return visitor.visitChildren(self)




    def origin(self):

        localctx = RegiaScriptParser.OriginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_origin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8126464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PhaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PHASE(self):
            return self.getToken(RegiaScriptParser.PHASE, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def INITIAL(self):
            return self.getToken(RegiaScriptParser.INITIAL, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_phaseDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPhaseDecl" ):
                return visitor.visitPhaseDecl(self)
            else:
                return visitor.visitChildren(self)




    def phaseDecl(self):

        localctx = RegiaScriptParser.PhaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_phaseDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 148
                self.match(RegiaScriptParser.DOC_COMMENT)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(RegiaScriptParser.PHASE)
            self.state = 155
            self.match(RegiaScriptParser.ID)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 156
                self.match(RegiaScriptParser.INITIAL)


            self.state = 159
            self.match(RegiaScriptParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StoryAgentDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGENT(self):
            return self.getToken(RegiaScriptParser.AGENT, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def PERIOD(self):
            return self.getToken(RegiaScriptParser.PERIOD, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def PLAYER(self):
            return self.getToken(RegiaScriptParser.PLAYER, 0)

        def getRuleIndex(self):
            return RegiaScriptParser.RULE_storyAgentDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStoryAgentDecl" ):
                return visitor.visitStoryAgentDecl(self)
            else:
                return visitor.visitChildren(self)




    def storyAgentDecl(self):

        localctx = RegiaScriptParser.StoryAgentDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_storyAgentDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 161
                self.match(RegiaScriptParser.DOC_COMMENT)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(RegiaScriptParser.AGENT)
            self.state = 168
            self.match(RegiaScriptParser.ID)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 169
                self.match(RegiaScriptParser.PLAYER)


            self.state = 172
            self.match(RegiaScriptParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgentBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGENT(self):
            return self.getToken(RegiaScriptParser.AGENT, 0)

        def ID(self):
            return self.getToken(RegiaScriptParser.ID, 0)

        def COLON(self):
            return self.getToken(RegiaScriptParser.COLON, 0)

        def DOC_COMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(RegiaScriptParser.DOC_COMMENT)
            else:
                return self.getToken(RegiaScriptParser.DOC_COMMENT, i)

        def agentSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegiaScriptParser.AgentSectionContext)
            else:
                return self.getTypedRuleContext(RegiaScriptParser.AgentSectionContext,i)


        def getRuleIndex(self):
            return RegiaScriptParser.RULE_agentBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAgentBlock" ):
                return visitor.visitAgentBlock(self)
            else:
                return visitor.visitChildren(self)




    def agentBlock(self):

        localctx = RegiaScriptParser.AgentBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_agentBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 174
                self.match(RegiaScriptParser.DOC_COMMENT)
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 180
            self.match(RegiaScriptParser.AGENT)
